--- a/fuzzing/Cargo.toml
+++ b/fuzzing/Cargo.toml
@@ -10,7 +10,9 @@ publish = false
 [workspace]
 
 [dependencies]
-rasn = { path = ".." }
-rasn-snmp = { path = "../standards/snmp" }
-rasn-pkix = { path = "../standards/pkix" }
-afl = "0.8.0"
+rasn = { path = "..", default-features = false, features = ["macros"]}
+#rasn-snmp = { path = "../standards/snmp" }
+#rasn-pkix = { path = "../standards/pkix" }
+afl = "0.14.5"
+clap = { version = "4.4.*", features = ["derive"] }
+anyhow = "1.0.75"
