--- a/fuzzing/Cargo.toml
+++ b/fuzzing/Cargo.toml
@@ -13,6 +13,7 @@ publish = false
 rasn = { path = "..", default-features = false, features = ["macros"]}
 #rasn-snmp = { path = "../standards/snmp" }
 #rasn-pkix = { path = "../standards/pkix" }
-afl = "0.14.5"
-clap = { version = "4.4.*", features = ["derive"] }
+afl = "0.15.5"
+clap = { version = "4.5.4", features = ["derive"] }
 anyhow = "1.0.75"
+pretty_assertions = "1.4.0"
