--- a/fuzzing/Cargo.toml
+++ b/fuzzing/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 [dependencies]
 rasn = { path = "..", default-features = false, features = ["macros"] }
 #rasn-snmp = { path = "../standards/snmp" }
-rasn-smi = { path = "../standards/smi" }
+# rasn-smi = { path = "../standards/smi" }
 afl = "0.15.5"
 clap = { version = "4.5.4", features = ["derive"] }
 anyhow = "1.0.75"
