--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ num-integer = { version = "0.1.45", default-features = false, features = [
   "i128",
 ] }
 jzon = { version = "0.12.5", optional = true }
+heapless = "0.8.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
