--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,9 @@ once_cell = { version = "1.20.2", default-features = false, features = [
 ] }
 rasn-compiler = { version = "0.5.3", optional = true }
 rasn-derive = { version = "0.20", path = "macros", optional = true }
-snafu = { version = "0.8.5", default-features = false, features = ["rust_1_81"] }
+snafu = { version = "0.8.5", default-features = false, features = [
+    "rust_1_81",
+] }
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
