--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ hashbrown = { version = "0.14.5", default-features = false, features = [
     "ahash",
     "inline-more",
 ] }
+heapless = "0.8.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
